<resources>
    <string name="app_name">Multiple Items</string>
    <string name="logo_desafio_latam">Logo Desafio Latam</string>
    <string name="seccion_de_carga_de_imagenes">IMAGE DOWNLOAD SECTION</string>
    <string name="cargue_una_imagen_aqu">Load an image here</string>
    <string name="cargar_imagen">LOAD IMAGE</string>
    <string name="siguiente">NEXT</string>
    <string name="logo_de_desafio_latam">logo de desafio latam</string>
    <string name="open_web">OPEN WEB</string>
    <string name="share_information">SHARE INFORMATION</string>

</resources>